--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </ol>
             <div class="carousel-inner container">
                 <div class="carousel-item active carousel-div">
-                    <img src="10.webp" class="d-block w-100 imageCarousel" alt="photo">
+                    <img src="smartphone.jpeg" class="d-block w-100 imageCarousel" alt="photo">
                 </div>
                 <div class="carousel-item carousel-div">
-                    <img src="gioneek.png" class="d-block w-100 imageCarousel" alt="photo">
+                    <img src="n.jpeg" class="d-block w-100 imageCarousel" alt="photo">
                 </div>
                 <div class="carousel-item carousel-div">
                     <img src="Gionee.webp" class="d-block w-100 imageCarousel" alt="photo">
@@ -73,7 +73,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-<a href="propo.html">a propo</a>
+
         <div class="row jumbotron jumbotron-fluid py-2 justify-content-center bg-white">
             <!--box 1-->
             <div class="card mx-2 border-0" style="width: 15rem; ">
